test/semant/negative_controls/buggy_progs/undeclared-type.con
concept test
purpose something
state
actions
  a(x : NewType) : NewType
  x
principle
